css/tokens.css
  /* ─────────────────────────────────────────
     Variables
  ───────────────────────────────────────── */
  @theme {
      --color-*: initial;
      --color-primary-one: var(--primary-one);
      --color-primary-two: var(--primary-two);
      --color-primary-three: var(--primary-three);
      --color-primary-four: var(--primary-four);
      --color-primary-five: var(--primary-five);
      --color-secondary-one: var(--secondary-one);
      --color-secondary-two: var(--secondary-two);
      --color-secondary-three: var(--secondary-three);
      --color-secondary-four: var(--secondary-four);
      --color-secondary-five: var(--secondary-five);
      --color-neutral-one: var(--neutral-one);
      --color-neutral-two: var(--neutral-two);
      --color-neutral-two-dark: #121212;
      --color-neutral-two-light: #F0EDED;
      --color-neutral-three: var(--neutral-three);
      --color-neutral-four: var(--neutral-four);
      --color-neutral-five: var(--neutral-five);
      --color-neutral-six: var(--neutral-six);
      --color-neutral-seven: var(--neutral-seven);
      --color-neutral-seven-light: #BECAB9;
      --color-neutral-eight-light: #DDE5D9;
      --color-neutral-nine: var(--neutral-nine);

      /* font variables */
      --font-base: "Inter", sans-serif;
      --font-button: "Manrope", sans-serif;
      --font-p-accent: "Manrope", sans-serif;
      --font-heading: "Space Grotesk", sans-serif;
      --font-nav: "Space Grotesk", sans-serif;
      --font-name: "Space Grotesk", sans-serif;
      --font-graph: "Space Grotesk", sans-serif;

      /* breakpoints */
      --breakpoint-xxs: 18.75rem;
      --breakpoint-xs: 25rem;
      --breakpoint-sm: 37.5rem;
      --breakpoint-md: 43.75rem;
      --breakpoint-lg: 53.125rem;
      --breakpoint-xl: 62.5rem;
      --breakpoint-xxl: 80rem;

      /* animations */
      --animate-slideInDown: slideDown 0.3s ease-out forwards;
      --animate-slideInLeft: slideInLeft 1.25s ease-out forwards;
      --animate-slideInRight: slideInRight 1.25s ease-out forwards;
      --animate-moveDown: moveDown 1s ease-out forwards;
      --animate-appear: appear 1s ease-out forwards;
      --animate-appearAlt: appear 2.5s ease-out backwards;
      --animate-fadeIn: fadeIn 300ms cubic-bezier(0.16, 1, 0.3, 1) forwards;

      @keyframes slideDown {
          from {
              opacity: 0;
              transform: translateY(-10px);
          }

          to {
              opacity: 1;
              transform: translateY(0);
          }
      }

      @keyframes slideInLeft {
          from {
              opacity: 0;
              transform: translateX(-100%);
          }

          to {
              opacity: 1;
              transform: translateX(0);
          }
      }

      @keyframes slideInRight {
          from {
              opacity: 0;
              transform: translateX(100%);
          }

          to {
              opacity: 1;
              transform: translateX(0);
          }
      }

      @keyframes moveDown {
          0% {
              opacity: 0;
              transform: translateY(-100%);
          }

          100% {
              opacity: 1;
              transform: translateY(0%);
          }
      }

      @keyframes appear {
          0% {
              opacity: 0;
          }

          100% {
              opacity: 1;
          }
      }

      @keyframes fadeIn {
          0% {
              opacity: 0;
              transform: translateY(8px);
          }

          100% {
              opacity: 1;
              transform: translateY(0);
          }
      }
  }

  :root {
      --primary-one: #5BBE5D;
      --primary-two: #7FCC81;
      --primary-three: #899484;
      --primary-four: #ACBAA5;
      --primary-five: #3F4A3C;
      --secondary-one: #EB8825;
      --secondary-two: #EFA152;
      --secondary-three: #FFC081;
      --secondary-four: #9E8265;
      --secondary-five: #FF9A81;
      --neutral-one: #0E0E0E;
      --neutral-two: #121212;
      --neutral-three: #131313;
      --neutral-four: #1C1B1B;
      --neutral-five: #2B2A2A;
      --neutral-six: #353535;
      --neutral-seven: #BECAB9;
      --neutral-seven-light: #BECAB9;
      --neutral-eight-light: #DDE5D9;
      --neutral-nine: #D8D5D4;
  }

  @media (prefers-reduced-motion: reduce) {
      * {
          animation-duration: 0.01ms !important;
          animation-iteration-count: 1 !important;
          transition-duration: 0.01ms !important;
          scroll-behavior: auto !important;
      }
  }

  /* ─────────────────────────────────────────
     Fonts
  ───────────────────────────────────────── */

  @font-face {
      font-display: swap;
      font-family: 'Inter';
      font-style: normal;
      font-weight: 400;
      src: url('../assets/fonts/inter-v20-latin-regular.woff2') format('woff2'),
          url('../assets/fonts/inter-v20-latin-regular.ttf') format('truetype');
  }

  @font-face {
      font-display: swap;
      font-family: 'Inter';
      font-style: italic;
      font-weight: 400;
      src: url('../assets/fonts/inter-v20-latin-italic.woff2') format('woff2'),
          url('../assets/fonts/inter-v20-latin-italic.ttf') format('truetype');
  }

  @font-face {
      font-display: swap;
      font-family: 'Inter';
      font-style: normal;
      font-weight: 700;
      src: url('../assets/fonts/inter-v20-latin-700.woff2') format('woff2'),
          url('../assets/fonts/inter-v20-latin-700.ttf') format('truetype');
  }

  @font-face {
      font-display: swap;
      font-family: 'Inter';
      font-style: italic;
      font-weight: 700;
      src: url('../assets/fonts/inter-v20-latin-700italic.woff2') format('woff2'),
          url('../assets/fonts/inter-v20-latin-700italic.ttf') format('truetype');
  }


  @font-face {
      font-display: swap;
      font-family: 'Manrope';
      font-style: normal;
      font-weight: 400;
      src: url('../assets/fonts/manrope-v20-latin-regular.woff2') format('woff2'),
          url('../assets/fonts/manrope-v20-latin-regular.ttf') format('truetype');
  }

  @font-face {
      font-display: swap;
      font-family: 'Manrope';
      font-style: normal;
      font-weight: 700;
      src: url('../assets/fonts/manrope-v20-latin-700.woff2') format('woff2'),
          url('../assets/fonts/manrope-v20-latin-700.ttf') format('truetype');
  }

  @font-face {
      font-display: swap;
      font-family: 'Space Grotesk';
      font-style: normal;
      font-weight: 400;
      src: url('../assets/fonts/space-grotesk-v22-latin-regular.woff2') format('woff2'),
          url('../assets/fonts/space-grotesk-v22-latin-regular.ttf') format('truetype');
  }

  @font-face {
      font-display: swap;
      font-family: 'Space Grotesk';
      font-style: normal;
      font-weight: 700;
      src: url('../assets/fonts/space-grotesk-v22-latin-700.woff2') format('woff2'),
          url('../assets/fonts/space-grotesk-v22-latin-700.ttf') format('truetype');
  }

  /* ─────────────────────────────────────────
     Light Mode settings
  ───────────────────────────────────────── */

  @media (prefers-color-scheme: light) {
      :root {
          --primary-one: #006E1C;
          --primary-two: #009927;
          --primary-three: #6F7A6B;
          --primary-five: #BECAB9;
          --secondary-one: #8B5000;
          --secondary-two: #BD6D00;
          --secondary-three: #D47A00;
          --secondary-four: #523D21;
          --secondary-five: #D45800;
          --neutral-one: #F1F1F1;
          --neutral-two: #F0EDED;
          --neutral-three: #E8E3E3;
          --neutral-four: #DCD5D5;
          --neutral-five: #D1C7C7;
          --neutral-six: #C5B9B9;
          --neutral-seven: #3F4A3C;
          --neutral-nine: #1C1B1B;
      }

      .toggle-moon {
          @apply hidden;
      }

      .toggle-sun {
          @apply block;
      }

      .slider {
          @apply translate-x-6.25;
      }
  }

  /* ─────────────────────────────────────────
     Starting States
  ───────────────────────────────────────── */

  @starting-style {
      [popover]:popover-open {
          transform: translateX(-100%);
          opacity: 0;
      }

      details[open]::details-content {
          block-size: 0;
          opacity: 0;
          transform: translateY(-16px);
      }
  }


  /* accordions on legacy browsers */
  @media all and (-ms-high-contrast:none),
  (-ms-high-contrast: active) {

      .accordion-content-wrapper {
          @apply max-h-0 overflow-hidden opacity-0 transition-[max-height_opacity] duration-400 ease-in-out;
      }

      summary {
          @apply block;
      }

  }

